@@ -642,12 +642,19 @@ namespace PathCopyCopy.Settings.UI.Forms
                 }
             }
             if (canExport && ExportUserSettingsSaveDlg.ShowDialog(this) == DialogResult.OK) {
+                bool worked;
                 using (new CursorChanger(this, Cursors.WaitCursor)) {
-                    UserSettings.ExportUserSettings(ExportUserSettingsSaveDlg.FileName);
+                    worked = UserSettings.ExportUserSettings(ExportUserSettingsSaveDlg.FileName);
                 }
-                MessageBox.Show(this, String.Format(Resources.MainForm_Msg_UserSettingsExported,
-                    ExportUserSettingsSaveDlg.FileName), Resources.MainForm_Msg_UserSettingsExportedMsgTitle,
-                    MessageBoxButtons.OK, MessageBoxIcon.Information);
+                if (worked) {
+                    MessageBox.Show(this, String.Format(Resources.MainForm_Msg_UserSettingsExported,
+                        ExportUserSettingsSaveDlg.FileName), Resources.MainForm_Msg_UserSettingsExportedMsgTitle,
+                        MessageBoxButtons.OK, MessageBoxIcon.Information);
+                } else {
+                    MessageBox.Show(this, String.Format(Resources.MainForm_Msg_UserSettingsNotExported,
+                        ExportUserSettingsSaveDlg.FileName), Resources.MainForm_Msg_UserSettingsNotExportedMsgTitle,
+                        MessageBoxButtons.OK, MessageBoxIcon.Error);
+                }
             }
         }
         
